icons added in work section

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
+    <!-- font awesome icons library  -->
+    <link rel="stylesheet" href="awesome/css/all.css" />
     <!-- locla style sheet of repo -->
     <link rel="stylesheet" href="style.css" />
     <title>Web Assessment</title>
@@ -127,29 +129,29 @@
         <div
           class="row contactSectionsBackground align-items-center text-white"
         >
-          <div class="col text-center">
+          <div class="col text-center contactLinks">
             <h1>Reach Out to me Below </h1><br>
             <!-- logos to other platforms with profile link -->
-            <a class="text-white" href="https://www.facebook.com/" target="_blank"
-            ><i class="fab fa-facebook-square" style="font-size: xx-large;"></i
+            <a  href="https://www.facebook.com/" target="_blank"
+            ><i class="fab fa-facebook-square" ></i
           ></a>
           <a
-            class="logodark"
+            class=""
             href="https://github.com/shakeel229"
             target="_blank"
-            ><i class="fab fa-github" style="font-size: xx-large;"></i
+            ><i class="fab fa-github" ></i
           ></a>
           <a
-            class="logodark"
+        
             href="https://www.linkedin.com/feed/"
             target="_blank"
-            ><i class="fab fa-linkedin" style="font-size: xx-large;"></i
+            ><i class="fab fa-linkedin" ></i
           ></a>
           <a
-            class="logodark"
+            
             href="https://www.instagram.com/?hl=en"
             target="_blank"
-            ><i class="fab fa-instagram" style="font-size: xx-large;"></i
+            ><i class="fab fa-instagram" ></i
           ></a>
           </div>
         </div>
