about and work section mobile responsive

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <!-- about section starts here  -->
       <section id="about">
         <div
-          class="row AboutsectionsBackground align-items-center text-primary"
+          class="row Aboutsections align-items-center text-primary"
         >
           <div class="col text-center">
             <h1>Shakeel Anjum</h1>
@@ -69,13 +69,13 @@
       <!-- work section starts here  -->
       <section id="work">
         <div
-          class="row workSectionsBackground align-items-center align-items-center"
+          class="row workSectionsBackground align-items-center "
         >
-          <div class="col text-center">
+          <div class="col- d-flex justify-content-center">
             <h1 class="text-white text-center">My Projects</h1>
           </div>
           <div class="w-100"></div>
-            <div class="col d-flex justify-content-center mt-0">
+            <div class="col-xs-6 d-flex justify-content-center ml-auto">
               <br />
               <!-- project 1 card -->
               <div class="card" style="width: 18rem;">
@@ -98,7 +98,7 @@
                 </div>
               </div>
             </div>
-            <div class="col d-flex justify-content-center">
+            <div class="col-xs-6 d-flex justify-content-center ml-auto">
               <!-- project 2 card -->
               <div class="card" style="width: 18rem;">
                 <img
@@ -132,7 +132,7 @@
           <div class="col text-center contactLinks">
             <h1>Reach Out to me Below </h1><br>
             <!-- logos to other platforms with profile link -->
-            <a  href="https://www.facebook.com/" target="_blank"
+            <a  href="https://www.facebook.com/Shakeel229" target="_blank"
             ><i class="fab fa-facebook-square" ></i
           ></a>
           <a
@@ -143,7 +143,7 @@
           ></a>
           <a
         
-            href="https://www.linkedin.com/feed/"
+            href="https://www.linkedin.com/in/shakeel-anjum-a638ba44/"
             target="_blank"
             ><i class="fab fa-linkedin" ></i
           ></a>
