mobile responsive projects section

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <!-- about section starts here  -->
       <section id="about">
         <div
-          class="row Aboutsections align-items-center text-primary"
+          class="row Aboutsections mx-auto align-items-center text-primary"
         >
           <div class="col text-center">
             <h1>Shakeel Anjum</h1>
@@ -71,11 +71,11 @@
         <div
           class="row workSectionsBackground align-items-center "
         >
-          <div class="col- d-flex justify-content-center">
+          <div class="col d-flex justify-content-center">
             <h1 class="text-white text-center">My Projects</h1>
           </div>
           <div class="w-100"></div>
-            <div class="col-xs-6 d-flex justify-content-center ml-auto">
+            <div class="col d-flex justify-content-center ml-auto">
               <br />
               <!-- project 1 card -->
               <div class="card" style="width: 18rem;">
@@ -98,7 +98,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-xs-6 d-flex justify-content-center ml-auto">
+            <div class="col d-flex justify-content-center ml-auto mt-4 mb-3">
               <!-- project 2 card -->
               <div class="card" style="width: 18rem;">
                 <img
