--- a/index.html
+++ b/index.html
@@ -20,41 +20,38 @@
     <!-- locla style sheet of repo -->
     <link rel="stylesheet" href="style.css" />
     <title>Web Assessment</title>
+    <!-- navbar starts here -->
+    <nav
+    class="navbar navbar-dark navbar-expand-lg fixed-top"
+    style="background-color: #30292f;"
+  >
+    <a href="#" class="navbar-brand text-white">Shakeel229</a>
+    <button
+      class="navbar-toggler"
+      data-toggle="collapse"
+      data-target="#navbarCollapse"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarCollapse">
+      <ul class="navbar-nav ml-auto text-primary">
+        <li class="navbar-item text-primary">
+          <a href="#about" class="nav-link">About Me</a>
+        </li>
+
+        <li class="navbar-item">
+          <a href="#work" class="nav-link">Work</a>
+        </li>
+        <li class="navbar-item">
+          <a href="#contact" class="nav-link">Contact</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
   </head>
   <body>
     <div class="container-fluid">
-      <div class="row">
-        <div class="col">
-          <!-- navbar starts here -->
-          <nav
-            class="navbar navbar-dark navbar-expand-lg fixed-top"
-            style="background-color: #30292f;"
-          >
-            <a href="#" class="navbar-brand text-white">Shakeel229</a>
-            <button
-              class="navbar-toggler"
-              data-toggle="collapse"
-              data-target="#navbarCollapse"
-            >
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarCollapse">
-              <ul class="navbar-nav ml-auto text-primary">
-                <li class="navbar-item text-primary">
-                  <a href="#about" class="nav-link">About Me</a>
-                </li>
-
-                <li class="navbar-item">
-                  <a href="#work" class="nav-link">Work</a>
-                </li>
-                <li class="navbar-item">
-                  <a href="#contact" class="nav-link">Contact</a>
-                </li>
-              </ul>
-            </div>
-          </nav>
-        </div>
-      </div>
+      
       <!-- about section starts here  -->
       <section id="about">
         <div
@@ -69,7 +66,7 @@
       <!-- work section starts here  -->
       <section id="work">
         <div
-          class="row workSectionsBackground align-items-center "
+          class="row workSectionsBackground "
         >
           <div class="col d-flex justify-content-center">
             <h1 class="text-white text-center">My Projects</h1>
