minor adjustments in projects sections

--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
             <h1 class="text-white text-center">My Projects</h1>
           </div>
           <div class="w-100"></div>
-            <div class="col d-flex justify-content-center ml-auto">
+            <div class="col d-flex justify-content-center ml-auto mt-4 mb-3">
               <br />
               <!-- project 1 card -->
-              <div class="card" style="width: 18rem;">
+              <div class="card" style="width: 18rem; height: 30rem;">
                 <img
                   class="card-img-top"
                   src="pics/portfolio.png"
@@ -97,7 +97,7 @@
             </div>
             <div class="col d-flex justify-content-center ml-auto mt-4 mb-3">
               <!-- project 2 card -->
-              <div class="card" style="width: 18rem;">
+              <div class="card" style="width: 18rem; 30rem;">
                 <img
                   class="card-img-top"
                   src="pics/kids.png"
@@ -107,7 +107,7 @@
                   <h5 class="card-title">Kids Gallery</h5>
                   <p class="card-text">
                     I designed a Kids Gallery of Alphabets learning using HTML5,
-                    Bootstrap 4 and CSS. It is up on github
+                    Bootstrap 4 and CSS.
                   </p>
                   <a
                     href="https://shakeel229.github.io/KidsGallery/"
